gfx/webrender_bindings/RenderCompositorLayersSWGL.h
@@ -37,7 +37,7 @@ class RenderCompositorLayersSWGL : public RenderCompositor {
 
   bool BeginFrame() override;
   void CancelFrame() override;
-  RenderedFrameId EndFrame(const nsTArray<DeviceIntRect>& aDirtyRects) final;
+  RenderedFrameId EndFrame(const nsTArray<DeviceIntRect>& aDirtyRects) override;
 
   bool SurfaceOriginIsTopLeft() override { return true; }
 
